--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <style>
         /* body styles */
 body {
+    background-image: url('ist.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: 'Helvetica Neue', sans-serif;
     background-size: cover;
     background-position: center center;
