--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ body {
 <div class="box">
     <i class="fas fa-search"></i>
     <input type="text" placeholder="Search" id="search-input"/> <br/>
+    <i class="tgico tgico-search"> ::before </i>
     <button id="search-btn">Go</button>
 </div>
 
