--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@ body {
     
 <div class="box">
     <i class="fas fa-search"></i>
+    <i class="tgico tgico-search"> </i>
     <input type="text" placeholder="Search" id="search-input"/> <br/>
-    <i class="tgico tgico-search"> ::before </i>
+    
     <button id="search-btn">Go</button>
 </div>
 
